--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0"
