--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,16 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@clerk/clerk-sdk-node": "^5.1.6",
         "@clerk/express": "^1.3.50",
+        "@google/generative-ai": "^0.24.0",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
-        "mongoose": "^8.11.0"
+        "express-async-handler": "^1.2.0",
+        "mongoose": "^8.12.0",
+        "morgan": "^1.10.0"
     },
     "keywords": [],
     "author": "",
