--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@clerk/clerk-react": "^5.25.6",
         "@clerk/clerk-sdk-node": "^5.1.6",
         "@clerk/express": "^1.3.50",
         "@google/generative-ai": "^0.24.0",
