--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,15 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.6.3",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
